--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,21 @@
-button {
-  padding: 15px 30px;
-  background-color: white;
-  border: 1px solid;
-  border-radius: 5px;
-  cursor: pointer;
-}
+button { padding: 15px 30px; background-color: white; border: 1px solid; border-radius: 5px; cursor: pointer; }
 
-.container {
-  text-align: center;
-}
+.container { text-align: center; }
 
-.box {
-  width: 200px;
-  margin: 10px;
-  display: inline-block;
-  background-color: orangered;
-  color: white;
-  padding: 10px;
-}
+.box { width: 200px; margin: 10px; display: inline-block; background-color: orangered; color: white; padding: 10px; }
 
-#output,
-#results,
-#rounds {
-  border: 1px solid orangered;
-  border-radius: 5px;
-  width: 600px;
-  margin: 5px auto;
-  padding: 10px;
-}
+#output, #results, #rounds { border: 1px solid orangered; border-radius: 5px; width: 600px; margin: 5px auto; padding: 10px; }
 
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-}
+.overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); }
 
-.overlay.show {
-  display: block;
-}
+.overlay.show { display: block; }
 
-.modal {
-  display: none;
-  background: #fff;
-  width: 200px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0);
-}
+.modal { display: none; background: #fff; width: 200px; position: absolute; top: 50%; left: 50%; transform: translate3d(-50%, -50%, 0); }
 
-.modal.show {
-  display: block;
-}
+.modal.show { display: block; }
 
-.modal .close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 5px;
-  color: #000;
-  text-decoration: none;
-}
+.modal .close { position: absolute; right: 0; top: 0; padding: 5px; color: #000; text-decoration: none; }
 
-.modal header {
-  font-size: 20px;
-  line-height: 30px;
-  min-height: 30px;
-  font-weight: bold;
-  padding: 0 30px;
-}
+.modal header { font-size: 20px; line-height: 30px; min-height: 30px; font-weight: bold; padding: 0 30px; }
 
-.modal .content {
-  min-height: 30px;
-  padding: 5px 30px;
-  text-align: center;
-}
-/*# sourceMappingURL=style.css.map */
+.modal .content { min-height: 30px; padding: 5px 30px; text-align: center; }
