--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,13 @@ button {
 
 .container {
   text-align: center;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .box {
-  width: 200px;
+  width: 25%;
   margin: 10px;
   display: inline-block;
   background-color: orangered;
@@ -24,7 +27,7 @@ button {
 #rounds {
   border: 1px solid orangered;
   border-radius: 5px;
-  width: 600px;
+  width: 50%;
   margin: 5px auto;
   padding: 10px;
 }
